--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 27 22:15:12 CET 2020
-sdk.dir=C\:\\Users\\ja\\AppData\\Local\\Android\\Sdk
+#Fri Feb 14 16:00:19 CET 2020
+sdk.dir=C\:\\Users\\Maurycy\\Android_sdk
