--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.kiand.LED2match"
-        minSdkVersion 19
-        targetSdkVersion 27
+        //minSdkVersion 19
+        minSdkVersion 14
+        //targetSdkVersion 27
+        targetSdkVersion 22
         //versionCode 102
         //versionName "1.01"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
