--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -5,14 +5,13 @@
     android:versionCode="550"
     android:versionName="5.5">
 
-
     <uses-feature
         android:name="android.hardware.usb.host"
         android:required="true" />
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
@@ -27,17 +26,19 @@
         android:label="Light2match"
         android:largeHeap="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ReassignLamps"></activity>
+        <activity
+            android:name=".TRSSequence"
+            android:label="@string/title_activity_list_view_demo" />
+        <activity android:name=".ReassignLamps" />
         <activity
             android:name=".LightSettings"
             android:label="Set Lights"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".BtScannerActivity"
             android:label="RGB LED Bluetooth scanner"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ServicePageActivity"
             android:label="LED2match"
@@ -72,7 +73,7 @@
             android:label="Operating hours"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSSequence"
+            android:name=".TRSSequence_old"
             android:label="Sequence Programming (PRG)"
             android:screenOrientation="portrait" />
         <activity
@@ -95,6 +96,9 @@
             android:name=".sequenceSummaryPage"
             android:label="HTS-RGBW"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".MyListAdapter"
+            android:label="PRG Sequence list" />
 
         <service
             android:name=".UsbCOMMsService"
