--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:name=".MyApplication"
         android:icon="@drawable/ic_launcher"
-        android:label="Light2match"
+        android:label="LED2match"
         android:largeHeap="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
@@ -54,7 +54,7 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".TRSDigitalPanel"
-            android:label="Light2match"
+            android:label="LED2match"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -86,8 +86,8 @@
             android:label="Manual"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSRecertificationPage"
-            android:label="Recertification Page"
+            android:name=".TRSMaintenancePage"
+            android:label="Maintenance Page"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TRSBluetoothDevicesScan"
