--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -21,8 +21,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         compileSdkVersion 28
-        versionCode 900
-        versionName "3.90"
+        versionCode 20
+        versionName "4.02"
     }
 
     flavorDimensions "api"
@@ -37,7 +37,7 @@ android {
             // the highest compatible API level, assign version codes in increasing
             // value with API level. To learn more about assigning version codes to
             // support app updates and uploading to Google Play, read Multiple APK Support
-            versionCode 3000 + android.defaultConfig.versionCode
+            versionCode 4000 + android.defaultConfig.versionCode
             versionNameSuffix "-minApi19"
 
         }
@@ -50,7 +50,7 @@ android {
             // the highest compatible API level, assign version codes in increasing
             // value with API level. To learn more about assigning version codes to
             // support app updates and uploading to Google Play, read Multiple APK Support
-            versionCode 2000 + android.defaultConfig.versionCode
+            versionCode 3000 + android.defaultConfig.versionCode
             versionNameSuffix "-minApi14"
 
         }
@@ -79,6 +79,7 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
