APK aligned to firmware version v0.16 + package name refactoring

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'kotlin-android'
 
 android {
     defaultConfig {
-        applicationId "com.kiand.LED2match"
+        applicationId "com.morris.LEDbar_controller"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         compileSdkVersion 28
