--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.kiand.LED2match"
+    package="com.morris.LEDbar_controller"
     android:versionCode="590"
     android:versionName="5.9">
 
@@ -19,38 +19,38 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.morris.LEDbar_controller.MainApplication"
         android:icon="@drawable/ic_launcher"
         android:label="LED2match"
         android:largeHeap="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".LicenseClass"
+            android:name="com.morris.LEDbar_controller.LicenseClass"
             android:label="License Page"
             />
         <activity
-            android:name=".TRSSequence"
+            android:name="com.morris.LEDbar_controller.TRSSequence"
             android:label="Sequence Programming (PRG)" />
-        <activity android:name=".ReassignLamps" />
+        <activity android:name="com.morris.LEDbar_controller.ReassignLamps" />
         <activity
-            android:name=".LightSettings"
+            android:name="com.morris.LEDbar_controller.LightSettings"
             android:label="Set Lights"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".BtScannerActivity"
+            android:name="com.morris.LEDbar_controller.BtScannerActivity"
             android:label="RGB LED Bluetooth scanner"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ServicePageActivity"
+            android:name="com.morris.LEDbar_controller.ServicePageActivity"
             android:label="LED2match"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SequenceProgramming"
+            android:name="com.morris.LEDbar_controller.SequenceProgramming"
             android:label="Lights Sequence page"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSDigitalPanel"
+            android:name="com.morris.LEDbar_controller.TRSDigitalPanel"
             android:label="LED2match"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -67,49 +67,49 @@
                 android:resource="@xml/usb_device_filter" />
         </activity>
         <activity
-            android:name=".TRSLightOperatingHours"
+            android:name="com.morris.LEDbar_controller.TRSLightOperatingHours"
             android:label="Operating hours"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSSequence_old"
+            android:name="com.morris.LEDbar_controller.TRSSequence_old"
             android:label="Sequence Programming (PRG)"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSSettings"
+            android:name="com.morris.LEDbar_controller.TRSSettings"
             android:label="Settings"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSManualPage"
+            android:name="com.morris.LEDbar_controller.TRSManualPage"
             android:label="Manual"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSMaintenancePage"
+            android:name="com.morris.LEDbar_controller.TRSMaintenancePage"
             android:label="Maintenance"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".TRSBluetoothDevicesScan"
+            android:name="com.morris.LEDbar_controller.TRSBluetoothDevicesScan"
             android:label="Paired bluetooth devices"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".sequenceSummaryPage"
+            android:name="com.morris.LEDbar_controller.sequenceSummaryPage"
             android:label="HTS-RGBW"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".OverlayPage"
+            android:name="com.morris.LEDbar_controller.OverlayPage"
             android:theme="@android:style/Theme.Translucent" />
         <activity
-            android:name=".DisabledOverlayPage"
+            android:name="com.morris.LEDbar_controller.DisabledOverlayPage"
             android:theme="@android:style/Theme.Translucent" />
         <activity
-            android:name=".MyListAdapter"
+            android:name="com.morris.LEDbar_controller.MyListAdapter"
             android:label="PRG Sequence list" />
 
         <service
-            android:name=".UsbCOMMsService"
+            android:name="com.morris.LEDbar_controller.UsbCOMMsService"
             android:enabled="true"
             android:stopWithTask="false" />
         <service
-            android:name=".BtCOMMsService"
+            android:name="com.morris.LEDbar_controller.BtCOMMsService"
             android:enabled="true"
             android:stopWithTask="false" />
     </application>
